1.0.14
Add parameter -features to Compile-AppInBcContainer to add support of the alc features parameter
Add parameter -bakFile to Restore-BcDatabaseFromArtifacts to allow restoring custom database using the artifact binaries

1.0.13
Issue #1414 the magic setting defaultTenantHasAllowAppDatabaseWrite=Y is not used when using -cleandatabase or -newdatabase
Add parameter -publishedOnly to Get-BcContainerAppInfo to get published apps (no tenant specified)
Add parameter -doNotCopyDatabase to New-BcContainerTenant to mount an existing database (move from other container)
Add parameter -doNotRemoveDatabase to Remove-BcContainerTenant to avoid removing the database (move to other container)
Add parameter -PublisherAzureActiveDirectoryTenantId to Publish-BcContainerApp
New function Restore-BcDatabaseFromArtifacts for restoring databases from artifacts on an external sql server
New function Remove-BcDatabase for removing databases from an external sql server
New parameters -databasePrefix and -replaceExternalDatabases to New-BcContainer to allow New-BcContainer to create/replace databases on external SQL Server
Issue #1417 Add parameters -databaseCredential and -compress to Backup-BcContainerDatabases
Issue #1416 Add parameter -sqlCredential to Run-TestsInBcContainer and Get-TestsFromBcContainer if using external SQL Server
Issue #1415 Implicitely import the Test Framework in Setup-BcContainerTestUsers if not already installed
Issue #1426 includePerformanceToolkit should automatically include includeTestToolkit and includeTestFrameWorkOnly (if not specified)
Publishing apps from a .zip file, where the name isn't .zip caused an error
Add parameter gitLab to Run-AlPipeline to add support for surfacing test errors on GitLab
Issue #1430 temp folder is not unique
Add GitHubActions option to Run-AlPipeline
Create Temp folder using GetRandomFileName in Download-Artifacts (instead of ticks)

1.0.12
Issue #1401 set app version if appBuild -or appRevision is specified