@@ -1,6 +1,7 @@
 1.0.14
 Add parameter -features to Compile-AppInBcContainer to add support of the alc features parameter
 Add parameter -bakFile to Restore-BcDatabaseFromArtifacts to allow restoring custom database using the artifact binaries
+Issue #1426 performance test samples are installed before performance test toolkit
 
 1.0.13
 Issue #1414 the magic setting defaultTenantHasAllowAppDatabaseWrite=Y is not used when using -cleandatabase or -newdatabase
